--- a/scss/sections/_carrousel.less
+++ b/scss/sections/_carrousel.less
@@ -1,8 +1,9 @@
 .carrousel{
     width: 100vw;
     background-image: url("../assets/images/slide-1.jpg");
-    height: 600px;
+    height: 700px;
     background-size: cover;
+    .efecto-blur;
     .all-center;
     .carrousel-container{
         width: 80vw;
@@ -47,6 +48,7 @@
         }
         .carrousel-button{
             .button-design();
+            width: 200px;
         }   
         .carrousel-dats{
             height: 100px;
