--- a/scss/sections/_contactanos.less
+++ b/scss/sections/_contactanos.less
@@ -1,9 +1,11 @@
 .contactanos{
     width: 100vw;
-    height: 650px;
+    height: 100vh - 160px;
     background-color: #F9F9F9;
     display: grid;
+    margin-top: 60px;
     grid-template-columns: 36vw 64vw;
+    .efecto-blur;
     .contactanos-title{
         font-weight: 700;
         font-size: 40px;
