--- a/scss/sections/_contacto.less
+++ b/scss/sections/_contacto.less
@@ -6,6 +6,7 @@
     height: 160px;
     padding: 0 100px;
     background-color: white;
+    .efecto-blur;
     .contacto-title{
         font-size: 36px;
         width: 600px;
