--- a/scss/sections/_servicios.less
+++ b/scss/sections/_servicios.less
@@ -2,6 +2,7 @@
     width: 100vw;
     height: 740px;
     background-size: cover;
+    .efecto-blur;
     background-image: url("../assets/images/servicios.png");
     .servicios-container{
         width: 100%;
