--- a/scss/styles.less
+++ b/scss/styles.less
@@ -16,3 +16,5 @@
 @import "sections/_contacto.less";
 @import "sections/_descargas.less";
 @import "sections/_footer.less";
+@import "sections/_windowsReg.less";
+@import "sections/_misionVision.less";
