--- a/scss/sections/_descargas.less
+++ b/scss/sections/_descargas.less
@@ -7,6 +7,7 @@
     padding-left: 120px;
     .all-center;
     justify-content: space-between;
+    .efecto-blur;
     .descargar-container{
         .descargar-titlecontainer{
             display: flex;
