--- a/scss/sections/_footer.less
+++ b/scss/sections/_footer.less
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 100px;
+    .efecto-blur;
     .footer-text{
         color: white;
         margin: 0;
