--- a/scss/sections/_nosotros.less
+++ b/scss/sections/_nosotros.less
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
+    .efecto-blur;
     background-color: #FEFEFE;
     .nosotros-img{
         width: 49vw;
