--- a/scss/sections/_registro.less
+++ b/scss/sections/_registro.less
@@ -4,6 +4,7 @@
     background-image: url("../assets/images/contacto.png");
     background-size: cover;
     background-position: center;
+    .efecto-blur;
     .registro-container{
         width: 100%;
         height: 430px;
