--- a/scss/sections/_footer.less
+++ b/scss/sections/_footer.less
@@ -7,6 +7,9 @@
     justify-content: space-between;
     padding: 0 100px;
     .efecto-blur;
+    @media @especial-landscape{
+        padding: 0 50px;
+    }
     .footer-text{
         color: white;
         margin: 0;
