--- a/scss/lib/_variables.less
+++ b/scss/lib/_variables.less
@@ -3,6 +3,9 @@
 @tablet-landscape: ~'(min-width: 1024px)';
 @website-landscape: ~'(min-width: 1350px)';
 
+@especial-landscape: ~'(max-width: 768px)';
+@especial-landscapeJA: ~'(max-width: 1000px)';
+
 @modal-time: 0.8s;
 @principal-color: #68d3cf;
 @secondary-color: #7AC8C6;
