--- a/scss/sections/_contactanos.less
+++ b/scss/sections/_contactanos.less
@@ -5,6 +5,11 @@
     display: grid;
     margin-top: 60px;
     grid-template-columns: 36vw 64vw;
+    @media @especial-landscape{
+        .se-ira{
+            display: none;
+        }
+    }
     .efecto-blur;
     .contactanos-title{
         font-weight: 700;
@@ -47,6 +52,9 @@
         .contactanos-form-container{
             display: grid;
             grid-template-rows: repeat(9, 1fr) 120px;
+            @media @especial-landscape{
+                align-items: center;
+            }
             label{
                 height: 20px;
                 font-size: 15px;
@@ -58,13 +66,19 @@
                 width: 800px;
                 border: 1px solid #c0c0c0;
                 border-radius: 2px;
+                @media @especial-landscape{
+                    width: 90vw;
+                }
             }
             textarea{
                 height: 25px;
                 margin-bottom: 10px;
                 width: 800px;
                 border: 1px solid #c0c0c0;
-                border-radius: 2px;    
+                border-radius: 2px;   
+                @media @especial-landscape{
+                    width: 90vw;
+                } 
             }
             .mensaje-design{
                 height: 120px;
@@ -75,6 +89,9 @@
             margin-top: 35px;
             width: 180px;
             margin-left: 69%;
+            @media @especial-landscape{
+                margin-left: 10px;
+            }
         }
     }
 }
