--- a/scss/sections/_contacto.less
+++ b/scss/sections/_contacto.less
@@ -6,15 +6,26 @@
     height: 160px;
     padding: 0 100px;
     background-color: white;
+    @media @especial-landscape{
+        padding: 0 50px;
+    }
     .efecto-blur;
     .contacto-title{
         font-size: 36px;
         width: 600px;
         font-weight: 700;
+        @media @especial-landscape{
+            font-size: 30px;
+            width: 65vw;
+        }
     }
     .contacto-button{
         .button-design;
         margin-right: 60px;
         width: 210px;
+        @media @especial-landscape{
+            margin-right: 0;
+            width: 30vw;
+        }
     }
 }
