--- a/scss/sections/_misionVision.less
+++ b/scss/sections/_misionVision.less
@@ -7,6 +7,9 @@
     border-bottom: 0;
     height: 81vh;
     margin-top: 50px;
+    @media @especial-landscape{
+        padding: 10px 5vw;
+    }
     .nosotros-element{
         h1{
             color: @principal-color;
