--- a/scss/sections/_registro.less
+++ b/scss/sections/_registro.less
@@ -13,10 +13,16 @@
         flex-direction: column;
         align-items: center;
         padding-top: 60px;
+        @media @especial-landscape{
+            padding-top: 20px;
+        }
         .registro-title{
             font-weight: 700;
             font-size: 38px;
             margin-bottom: 17px;
+            @media @especial-landscape{
+                font-size: 34px;
+            }
         }
         .registro-text{
             line-height: 18px;
@@ -25,12 +31,17 @@
             text-align: center;
             color: #FEFEFE;
             margin-bottom: 24px;
+            @media @especial-landscape{
+                width: 400px;
+            }
         }
         .registro-data{
             width: 70vw;
             padding: 40px;
             display: grid;
             grid-template-columns: 1fr 1fr;
+            align-items: center;
+            justify-content: center;
             div{
                 .all-center;
                 flex-direction: column;
@@ -38,10 +49,17 @@
             .registro-semititle{
                 font-size: 40px;
                 margin-bottom: 36px;
+                @media @especial-landscape{
+                    text-align: center;
+                    font-size: 28px;
+                }
             }
             .registro-button{
                 .button-design;
                 width: 180px;
+                @media @especial-landscape{
+                    width: 120px;
+                }
             }
         }
     }
